# python-otel-experiment

./: .env.example  README.md  conftest.py  docker-compose.yml  dockerfile  pyproject.toml  python-otel-experiment.code-workspace
src/python_otel_experiment/: main.py
src/python_otel_experiment/config/: env.py
src/python_poetry_boilerplate/libs/: my_lib.py
tests/: test_my_app.py
